# claude-tui

./: .gitignore  LICENSE  README.md  pyproject.toml
src/claude_tui/: __init__.py  __main__.py  app.py  cli.py  diff_tracker.py  session_picker.py  session_screen.py  terminal_widget.py
src/claude_tui/widgets/: __init__.py
