[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-tui"
version = "0.1.1"
description = "Terminal UI IDE wrapper for Claude Code CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "crlxs" }]
keywords = ["claude", "tui", "ide", "terminal", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "textual>=1.0.0",
    "rich>=14.0",
    "pyte>=0.8",
    "ptyprocess>=0.7",
    "watchdog>=3.0",
]

[project.scripts]
claude-tui = "claude_tui.cli:main"

[project.urls]
Homepage = "https://github.com/crlxs/claude-tui"
Issues = "https://github.com/crlxs/claude-tui/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_tui"]
